test/valid_bms/implicit_return_type.bms
function awoo() {
    return;
}

function chan() { }
