test/parse_error/let_let.bms
function awoo() -> Int {
    let let x = 0;
}
